# UnityTextChat

./: .gitignore  README.md
Builds/Client/NetworkUnityProject_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
Client/NetworkUnityProject_Data/: globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
SDLServer/: .gitattributes  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ChatServer.sln  ChatServer.vcxproj  ChatServer.vcxproj.filters  MyGame.vcxproj  MyGame.vcxproj.filters  MyServerSolution.sln  Server.sln  Server.vcxproj  Server.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
SDLServer/SDL2/SDL2_net/: SDL2_netConfig.cmake
SDLServer/cmake/: FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  ProjectCommon.cmake
SDLServer/src/: Main.cpp
UnityProject/Assets/: ChatScene.unity  chatHandler.cs
UnityProject/Assets/Scenes/: ChatScene.unity
UnityProject/Assets/Scripts/: TCPClient.cs  chatHandler.cs
UnityProject/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
